Attempt to fix slider nav on mobile
but decided to just display: none.

--- a/sass/home.scss
+++ b/sass/home.scss
@@ -9,6 +9,10 @@ $papa-bear: 1050px;
 $mama-bear: 850px;
 $baby-bear: 650px;
 
+div#responsive-menu {
+	z-index: 1000 !important;
+}
+
 .rev_slider_wrapper {
 	margin: 0 auto !important;
 }
@@ -50,10 +54,11 @@ article.fp {
 }
 
 div.tp-bullets {
+	z-index: 25;
 	.tpclear {
 		border: none;
 	}
-	div.bullet { /*This is a place holder for the slider navigation but styles apply!!!*/
+	div.bullet { /*This is 0 place holder for the slider navigation but styles apply!!!*/
 		width: 12px !important;
 		height: 12px !important;
 		margin-left: 17px !important;
@@ -63,6 +68,7 @@ div.tp-bullets {
 		border-radius: 50px;
 		-webkit-transition: all .2s;
 		transition: all .2s;
+		z-index: 0 !important;
 		&:hover {
 			border: $red !important;
 			background: $red !important;
